# price-watcher

./: PriceWatcher.spec  PriceWatcherApp.spec  README.md  app.py  app_site.py  automação.py  cache_perfil_firefox.txt  pyproject.toml  relatorio_webscreeping.txt  test.py
data/: aliexpress_notebook_20250622_H15M34S47_page1.csv  aliexpress_notebook_20250623_211442.csv  aliexpress_notebooks_20250623_195226.csv  mercado_livre_notebook_20250623_211217.csv
resultados/: A10 Gen 2_Todas as Lojas.txt  celular_Amazon.txt  celular_Todas as Lojas.txt  mouse logitec 380 sem fio_Todas as Lojas.txt
scrapers/: aliexpress.py  amazon.py  kabum.py  mercadolivre.py  pichau.py  terabyteshop.py
site/: index.html
utils/: data_processor.py
